Fix video element overflow

--- a/source/stylesheets/_video.scss
+++ b/source/stylesheets/_video.scss
@@ -6,7 +6,7 @@
     @include fill-parent;
     @include shift(0);
   }
-  margin-top: 15vh;
+  margin-top: -2%;
 }
 
 @media screen and (max-height: $small-height) {
@@ -36,8 +36,8 @@
   }
 
   header.navigation {
-    $navigation-pinned-color: darken($base-background-color, 40%);
-    $navigation-pinned-color-hover: darken($navigation-pinned-color, 40%);
+    $navigation-pinned-color: darken($base-background-color, 80%);
+    $navigation-pinned-color-hover: lighten($navigation-pinned-color, 40%);
 
     .navigation-menu-button {
       color: $navigation-pinned-color !important;
